<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondaryContainer">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/qna_logo"
                android:src="@drawable/logo_qna" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/do_you_have_any_question"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:text="@string/tagline"
                android:textAppearance="?attr/textAppearanceTitleSmall" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/checkPrivacyPolicy"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/checkTermsAndConditions"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions" />

            <Button
                android:id="@+id/buttonSignUp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_with_google"
                app:icon="@drawable/google" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/pleaseWait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_wait"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/privacyPolicyLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/termsAndConditionsLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:text="@string/terms_and_conditions"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            android:textStyle="italic" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>